# ferrif

./: .gitignore  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  license.html  license.rs
.github/workflows/: main.yaml
resources/: clues.json
resources/zip/: clues.json
resources/zip/subfolder/: basic_4.z3  clues.json
src/: app.rs  main.rs
src/app/: credits_window.rs  licenses.rs  main_help_window.rs  preferences_window.rs  stats_window.rs  story_details_window.rs  story_list_window.rs  story_load_window.rs  terp.rs
src/app/ifdb/: ifiction.rs  mod.rs  tests.rs
src/app/terp/: clues_window.rs  command_output_window.rs  eguiio.rs  notes_window.rs  saves_window.rs  screenlib.rs  story_help_window.rs  theme.rs  transcript_window.rs  windows.rs
