[package]
name = "ferrif"
version = "0.9.2"
authors = ["Matthew Christensen <mchristensen@moosepod.com>"]
edition = "2018"
license = "MIT"

[features]

# Building in test mode adds additional debug tooling
testmode = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.18.0" # Gives us egui, epi and web+native backends

zmachine = { git = "https://github.com/moosepod/ferrif-zmachine", rev = "0b466d87a67a098ff9499e2e8ec2c7d7e856e709" }
# Change to relative path if developing locally 
#zmachine = { path = "../ferrif-zmachine" }
clap = "2"
regex = "1"
chrono = "0.4"

home = "0.5.3"
serde = { version = "1", features = ["derive"] }
xml-rs = "0.8"
lazy_static = "1.4.0"
serde_derive = "1.0"
zip = "0.5"
serde_json = "1.0"
native-dialog = "0.6.1"
num-format = "0.4.0"

[profile.release]
opt-level = 2 # fast and small wasm

[dependencies.rusqlite]
version = "0.24.0"
features = ["bundled", "chrono"]
